--- a/BlazorPortal/Components/Pages/Home.razor
+++ b/BlazorPortal/Components/Pages/Home.razor
@@ -2,6 +2,9 @@
 
 <PageTitle>Home</PageTitle>
 
-<h1>Hello, world!</h1>
 
-Welcome to your new app.
+
+    <NavLink  href="function-apps">
+        <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Function Apps
+    </NavLink>
+
