--- a/BlazorPortal/Components/Pages/AzureFunctionTable.razor
+++ b/BlazorPortal/Components/Pages/AzureFunctionTable.razor
@@ -16,7 +16,7 @@ else
     <table class="table">
         <thead>
             <tr>
-                <th></th>
+                <th>Actions</th>
                 <th>Name</th>
                 <th>Status</th>
                 <th>Trigger</th>
@@ -73,7 +73,7 @@ else
         }
         catch(Exception)
         {
-            return trigger;  // We do not understand the trigger description so we just return it to user
+            return trigger;  // We do not understand the trigger description so we just return it to an user as it is.
         }
     }
 }
